[package]
name = "yamlstar"
version = "0.1.0"
edition = "2021"
description = "Pure YAML 1.2 loader - Rust binding for libyamlstar"
license = "MIT"
readme = "ReadMe.md"
repository = "https://github.com/yaml/yamlstar"
authors = ["Ingy döt Net <ingy@ingy.net>"]

[dependencies]
dlopen = "0.1.8"
libc = "0.2.150"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
